[package]
name = "plydough"
version = "0.1.0"
authors = ["Alex Kofke <akofke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0-alpha1"
smallvec = "1.3.0"
lexical = "5.2.0"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "bench_parse"
harness = false

[profile.bench]
debug = true